tests/ui/invalid_pymodule_trait.stderr
error: `#[pymodule_export]` may only be used on `use` statements
 --> tests/ui/invalid_pymodule_trait.rs:5:5
  |
5 |     #[pymodule_export]
  |     ^
